--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@shopify/polaris": "^10.27.2",
     "@shopify/stylelint-polaris": "^5.1.0",
     "@vitejs/plugin-react": "1.2.0",
+    "i18next": "^22.4.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^12.2.0",
     "react-query": "^3.34.19",
     "react-router-dom": "^6.3.0",
     "vite": "^2.8.6"
